jenkins/01-jenkins-ns_sa_rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
    istio-injection: enabled
