jenkins/03-jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &Labels
    app: jenkins
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels: *Labels
  template:
    annotations:
      sidecar.istio.io/inject: "true"
    metadata:
      labels: *Labels
    spec:
      securityContext:
        #runAsUser: 993
        #runAsGroup: 988
        fsGroup: 1001006
        fsGroupChangePolicy: "OnRootMismatch"
        #supplementalGroups: [1002]
      serviceAccountName: jenkins-sa
      containers:
      - name: jenkins
        image: jenkins/jenkins:jdk11
        #image: jenkins/jenkins:latest
        #image: jenkins/jenkins:lts-jdk11
        imagePullPolicy: Always
        ports:
        - name: http-ui
          containerPort: 8080
        - name: tcp-jnlp
          containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        securityContext: {}
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: data-jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
spec:
  selector:
    app: jenkins
  ports:
  - name: http-ui
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp-jnlp
    port: 50000
    protocol: TCP
    targetPort: 50000
  #ExternalTrafficPolicy can only be set on NodePort and LoadBalancer service
  #externalTrafficPolicy: Local
  #clusterIP: 172.24.24.51
  #loadBalancerIP
  #type: NodePort
---
