jenkins/04-jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: &Labels
    app: jenkins
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
    version: v2.311
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      securityContext:
        #runAsUser: 993
        #runAsGroup: 988
        fsGroup: 1001006
        fsGroupChangePolicy: "OnRootMismatch"
        #supplementalGroups: [1002]
      serviceAccountName: jenkins-sa
      containers:
      - name: jenkins
        image: jenkins/jenkins:jdk11
        #image: jenkins/jenkins:latest
        #image: jenkins/jenkins:lts-jdk11
        imagePullPolicy: Always
        ports:
        - name: http-ui
          containerPort: 8080
        - name: tcp-jnlp
          containerPort: 50000
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        securityContext: {}
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: data-jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
spec:
  selector:
    app: jenkins
  ports:
  - name: http-jenkins
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp-jnlp
    port: 50000
    protocol: TCP
    targetPort: 50000
---
