jenkins/03-jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
    component: ci-cd
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
        managed-by: moratelindo-product-dept
    spec:
      securityContext:
        #runAsUser: 993
        #runAsGroup: 988
        fsGroup: 1002
        fsGroupChangePolicy: "OnRootMismatch"
        #supplementalGroups: [1002]
      serviceAccountName: jenkins-sa
      containers:
      - name: jenkins
        image: jenkins/jenkins:jdk11
        #image: jenkins/jenkins:latest
        #image: jenkins/jenkins:lts-jdk11
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 8080
        - name: jnlp-port
          containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        securityContext: {}
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins
  labels:
    app: jenkins
spec:
  #type: NodePort
  selector:
    app: jenkins
  ports:
  - name: jenkins-ui
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: jenkins-jnlp
    protocol: TCP
    port: 50000
    targetPort: 50000
  #ExternalTrafficPolicy can only be set on NodePort and LoadBalancer service
  #externalTrafficPolicy: Local
  #clusterIP: 172.24.24.51
  #loadBalancerIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.org/client-max-body-size: 100m
    nginx.org/server-tokens: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.nebula.moratel.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
