jenkins/05-jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app.kubernetes.io/component: jenkins
    app.kubernetes.io/part-of: ci-cd
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prd"
    #cert-manager.io/cluster-issuer: "selfsigned-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.app.cluster.local
    secretName: jenkins-tls
  rules:
  - host: jenkins.app.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
---
