jenkins/05-jenkins-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gw
  namespace: jenkins
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http-jenkins
      protocol: HTTP
    hosts:
    - jenkins.app.cluster.local
  - port:
      number: 443
      name: https-jenkins
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: jenkins-tls
    hosts:
    - jenkins.app.cluster.local
  - port:
      number: 50000 # to expose internal service via external port 2379
      name: tcp-jnlp
      protocol: TCP
    hosts:
    - "jenkins.app.cluster.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
  - jenkins.app.cluster.local
  gateways:
  - jenkins-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jenkins # pods service name
        port:
          number: 8080
  tcp:
  - match:
    - port: 50000
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 50000
---
